ros2_ws/log/build_2024-10-07_17-52-19/visual_servo/stderr.log
  File "/home/swati/VBM/ros2_ws/install/visual_servo/lib/python3.10/site-packages/visual_servo/controller.py", line 34
    response1, response2 = await asyncio.gather(future1, future2)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'await' outside async function

